--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: home
 title: klaar.ai
 subtitle: Design, implementation and operation of machine learning systems
+cover-img: "/assets/img/5763.jpg"
 ---
