--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 title: klaar.ai
 subtitle: Design, implementation and operation<br>of machine learning systems
-cover-img: "/assets/img/5763.jpg"
+cover-img: "/assets/img/IMG_5763.jpg"
 ---
