--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: klaar.ai
-subtitle: Design, implementation and operation<br>of machine learning systems
+subtitle: Design, implementation and operation of machine learning systems
 cover-img: "/assets/img/IMG_5763.jpg"
 ---
